--- a/quiz.html
+++ b/quiz.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Sound Quiz!!</h1>   
+    
+    <!-- Number of questions  -->
+    <div id="info">
+        <p>
+            <span id="quizNumber">1</span>/<span id="totalQuiz">1</span>
+        </p>
+        <p>
+            Points: <span id="points">0</span>
+        </p>
+    </div>
+    
+    <div id="quiz-area">
+        <!-- Quiz question -->
+        <p id="question"></p>
+        <ul id="answer"></ul>
 
+        <div id="result"></div>
+
+        <button id="submit">Submit</button>
+    </div>
+
+    <div id="high-score-wrap">
+      highest score: <span id="high-score">0</span>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
