--- a/quiz-pro.html
+++ b/quiz-pro.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="showQuestions();">
     <h1>Sound PRO Quiz!!</h1>   
     
     <!-- Number of questions  -->
@@ -29,6 +29,6 @@
     <div id="high-score-wrap">
       highest score: <span id="high-score">0</span>
     </div>
-    <script src="script-pro.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
