--- a/quiz.html
+++ b/quiz.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="showQuestions();">
     <h1>Sound Quiz!!</h1>   
     
     <!-- Number of questions  -->
