--- a/quiz-pro.html
+++ b/quiz-pro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-pro.css">
 </head>
 <body onload="showQuestions();">
     <h1>Sound PRO Quiz!!</h1>   
@@ -29,6 +29,6 @@
     <div id="high-score-wrap">
       highest score: <span id="high-score">0</span>
     </div>
-    <script src="script.js"></script>
+    <script src="script-pro.js"></script>
 </body>
 </html>
