--- a/quiz.html
+++ b/quiz.html
@@ -1,34 +1,382 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sound Quiz</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @font-face {
+            font-family: 'Quicksand';
+            src: url('/resources/fonts/Quicksand.ttf');
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Quicksand', sans-serif;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            background-color: #16161a;
+            min-height: 100vh;
+        }
+
+        h1 {
+            text-align: center;
+            margin: 20px 0;
+            font-size: 2.5rem;
+            color: #FFDA44; /* Bright color for contrast */
+        }
+
+        #info,
+        #high-score-wrap {
+            display: flex;
+            justify-content: space-between;
+            width: 90%;
+            max-width: 500px;
+            margin: 20px auto;
+            font-size: 1.2rem;
+            padding: 10px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 10px;
+        }
+
+        #quiz-area {
+            width: 90%;
+            max-width: 500px;
+            margin: 10px auto;
+            background-color: #7f5af0;
+            padding: 30px;
+            border-radius: 25px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+        }
+
+        button {
+            font-family: "Quicksand", sans-serif;
+            text-transform: uppercase;
+            border: none;
+            border-radius: 25px;
+            padding: 15px;
+            color: #FFFFFF;
+            background-color: #DCB239;
+            width: 100%;
+            margin-top: 30px;
+            cursor: pointer;
+            outline: none;
+            transition: background-color 0.3s, transform 0.2s, box-shadow 0.2s;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3), inset 0 -3px 5px rgba(255, 255, 255, 0.2);
+        }
+
+        button:active {
+            background-color: #1b744f;
+            transform: translateY(4px);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3), inset 0 -3px 5px rgba(255, 255, 255, 0.1);
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            background-color: transparent;
+            margin: 10px 0;
+            padding: 10px;
+            border: 1px solid lightgray;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        li:hover {
+            background: #94a1b2;
+        }
+
+        .selected,
+        .selected:hover {
+            background: #16161a;
+        }
+
+        .correct {
+            background: #2cb67d;
+            color: white;
+        }
+
+        .wrong {
+            background: #e16162;
+            color: white;
+        }
+
+        #result {
+            text-align: center;
+            font-size: 1.5rem;
+            margin-top: 20px;
+        }
+
+        /* Media Queries for responsiveness */
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 2rem; /* Smaller heading on mobile */
+            }
+
+            #info,
+            #high-score-wrap {
+                flex-direction: column;
+                align-items: center;
+            }
+
+            #info p,
+            #high-score-wrap p {
+                margin: 5px 0;
+            }
+        }
+    </style>
 </head>
+
 <body onload="showQuestions();">
-    <h1>Sound Quiz!!</h1>   
-    
+    <h1>Sound Quiz!!</h1>
+
     <!-- Number of questions  -->
     <div id="info">
         <p>
-            <span id="quizNumber">1</span>/<span id="totalQuiz">1</span>
+            <span id="quizNumber">1</span>/<span id="totalQuiz">10</span>
         </p>
         <p>
             Points: <span id="points">0</span>
         </p>
     </div>
-    
+
     <div id="quiz-area">
         <!-- Quiz question -->
         <p id="question"></p>
         <ul id="answer"></ul>
-
         <div id="result"></div>
-
         <button id="submit">Submit</button>
     </div>
 
     <div id="high-score-wrap">
-      highest score: <span id="high-score">0</span>
+        highest score: <span id="high-score">0</span>
     </div>
+
     <script src="script.js"></script>
+    <script>
+        let score = 0;
+        document.getElementById("high-score").innerText = localStorage.getItem("hs");
+
+        // Creating questions and answers
+        let question1 = {
+            question: "1. What type of wave is a sound wave?",
+            answers: ["Transverse wave", "Longitudinal wave", "Surface wave", "Electromagnetic wave"],
+            correct: 1
+        };
+
+        let question2 = {
+            question: "2. Which of the following properties of sound waves determines how loud a sound is?",
+            answers: ["Frequency", "Wavelength", "Amplitude", "Time period"],
+            correct: 2
+        };
+
+        let question3 = {
+            question: "3. The time taken to complete one full cycle of a wave is known as:",
+            answers: ["Frequency", "Amplitude", "Wavelength", "Time period"],
+            correct: 3
+        };
+
+        let question4 = {
+            question: "4. If the frequency of a sound wave is 440 Hz, what is its time period?",
+            answers: ["0.00227 seconds", "0.00455 seconds", "0.01 seconds", "0.5 seconds"],
+            correct: 0
+        };
+
+        let question5 = {
+            question: "5. What is the relationship between frequency (f) and time period (T)?",
+            answers: ["f = T", "f = 1/T", "f = T^2", "f = 2T"],
+            correct: 1
+        };
+
+        let question6 = {
+            question: "6. Sound cannot travel through:",
+            answers: ["Air", "Water", "Solid", "Vacuum"],
+            correct: 3
+        };
+
+        let question7 = {
+            question: "7. Which of the following instruments is classified as a wind instrument?",
+            answers: ["Violin", "Flute", "Drum", "Guitar"],
+            correct: 1
+        };
+
+        let question8 = {
+            question: "8. In a sound wave, a region where particles are close together is called:",
+            answers: ["Rarefaction", "Compression", "Amplitude", "Wavelength"],
+            correct: 1
+        };
+
+        let question9 = {
+            question: "9. The distance between two consecutive compressions in a sound wave is known as:",
+            answers: ["Amplitude", "Frequency", "Wavelength", "Time period"],
+            correct: 2
+        };
+
+        let question10 = {
+            question: "10. Which of the following factors does NOT affect the speed of sound in a medium?",
+            answers: ["Temperature", "Density of the medium", "Frequency of the sound wave", "Elasticity of the medium"],
+            correct: 2
+        };
+
+        // Create an array of objects
+        const questions = [question1, question2, question3, question4, question5, question6, question7, question8, question9, question10];
+
+        // Initialize variables
+        let correctAns = 0;
+        let quizPage = 1;
+        let currentIndex = 0;
+        let currentQuestion = questions[currentIndex];
+        const ulTag = document.getElementsByTagName('ul')[0];
+        const button = document.getElementById('submit');
+        const questionTitle = document.getElementById('question');
+        const result = document.getElementById("result");
+        const classHighlight = 'selected';
+
+        // Display Answers and highlight selected item
+        function showQuestions() {
+            document.getElementById('totalQuiz').innerHTML = questions.length;
+
+            if (currentIndex > 0 && currentIndex < questions.length) {
+                ulTag.innerHTML = '';
+                button.innerHTML = 'Submit';
+                button.className = 'submit';
+                button.id = 'submit';
+                document.getElementById('quizNumber').innerHTML = quizPage;
+            }
+
+            // Display Results in the final page
+            if (currentIndex == questions.length) {
+                ulTag.innerHTML = '';
+                document.getElementById('question').innerHTML = '';
+                showResults();
+                return;
+            }
+
+            questionTitle.innerHTML = currentQuestion.question;
+
+            // Create a for loop to generate the answers and display them on the page
+            for (let i = 0; i < currentQuestion.answers.length; i++) {
+                // Creating answers
+                const newAns = document.createElement('li');
+                newAns.id = 'ans' + (i + 1);
+                newAns.className = "notSelected";
+                const textAns = document.createTextNode(currentQuestion.answers[i]);
+                newAns.appendChild(textAns);
+                const addNewAnsHere = document.getElementById('answer');
+                addNewAnsHere.appendChild(newAns);
+
+                newAns.addEventListener("click", function (e) {
+                    e.preventDefault();
+                    document.querySelectorAll(".notSelected").forEach(function (liTag) {
+                        liTag.classList.remove(classHighlight);
+                    });
+                    newAns.classList.add(classHighlight);
+                });
+            }
+
+            // Check answer once it has been submitted
+            button.onclick = function () {
+                checkAnswer();
+            };
+        }
+
+        // Show Correct Answer
+        function checkAnswer() {
+            // Get selected list
+            const selectedItem = document.querySelector(".selected");
+
+            // Check that an answer has been selected
+            if (selectedItem === undefined || selectedItem === null) {
+                alert("Please select an answer!");
+                return;
+            } else {
+                // Get user answer in the form of text
+                var userAns = selectedItem.innerHTML;
+            }
+
+            // Change the background of the answer according to the results
+            if (userAns == currentQuestion.answers[currentQuestion.correct]) {
+                // Change color of selected item by changing className
+                selectedItem.className = 'correct';
+                // Count the number of correct answers
+                correctAns++;
+                score += 10;
+            } else {
+                // Change the background of the wrong answer
+                selectedItem.className = 'wrong';
+                // Highlight the right answer if the user got it wrong
+                // Change the class name of the correct answer
+                ulTag.getElementsByTagName('li')[currentQuestion.correct].className = 'correct';
+                score -= 5;
+            }
+
+            // Create a next Question button once the answer has been submitted
+            button.innerHTML = 'Next Question';
+            button.className = 'next';
+            button.id = 'next';
+            points.innerHTML = score;
+
+            prevousQuestion = currentQuestion;
+            quizPage++;
+            currentIndex++;
+            currentQuestion = questions[currentIndex];
+
+            // Start with the next question once the "Next" button has been clicked
+            button.onclick = function () {
+                showQuestions();
+            };
+            return;
+        }
+
+        // Highest score
+        const high_score = () => {
+            if (!localStorage.getItem('hs')) {
+                localStorage.setItem('hs', 0);
+            } else if (localStorage.getItem('hs') < score) {
+                localStorage.setItem('hs', score);
+            }
+            document.getElementById("high-score").innerText = localStorage.getItem("hs");
+        };
+
+        // Final score
+        function showResults() {
+            let message;
+            let promotion;
+            if (score == 100) {
+                message = "Congratulations 🎉";
+                promotion = '<button onclick="promote();">Try PRO Level</button> <button onclick="try_again()">Try Again</button>';
+            } else {
+                message = "Try Again";
+                promotion = '<button onclick="try_again()">Try Again</button> <button onclick="promote();">Yet Try PRO Level</button>';
+            }
+
+            result.innerHTML = `<h2>${message}</h2> You scored ${correctAns} out of ${currentIndex} correctly <br /> You scored ${score} points <br /><br /> ${promotion}`;
+            button.style.display = "none";
+            high_score();
+        }
+
+        function try_again() {
+            location.reload();
+        }
+
+        function promote() {
+            location.replace("https://kode-cat.github.io/physics/quiz-pro.html");
+        }
+    </script>
 </body>
+
 </html>
