--- a/k.html
+++ b/k.html
@@ -388,7 +388,7 @@
       
       <section>
         <h2>
-          <a href="/quiz.html">Start Quiz</a>
+          <a href="https://kode-cat.github.io/G-X-plained/quiz">Start Quiz</a>
         </h2>
       </section>
       
